# gdbserver-static

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
patch/: disable-remote-libthread_db.diff  fix-zig-build.diff  proc-mem-rw-memory.diff
scripts/: check.sh
